mdmCeneveo/src/objects/Issues_New_Feature_Request__c.object
<CustomObject>
    <description>Used internally by the sf.com team to manage the change control process.  (SIR)</description>
    <fields>
        <fullName>ChildObject__c</fullName>
        <description>Field to hold the Id of the associated DCR.  The ID of this field is used in the Create SIR button on Concierge.</description>
        <label>ChildObject</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collaborator_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborator 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Issue_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collaborator_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborator 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Issue_Reports3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Declined__c</fullName>
        <label>Date Declined</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Estimated_Completion__c</fullName>
        <label>Date Estimated Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_In_Process__c</fullName>
        <label>Date In Process</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Put_On_Hold__c</fullName>
        <label>Date Put On Hold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_for_Review__c</fullName>
        <label>Date Submitted for Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <inlineHelpText>Picklist of Department this SIR is related to - Currently Yardi - IT - SFDC</inlineHelpText>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yardi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Please provide as much detail about the issue or new feature requested as possible.  For faster resolution, it is critical you describe, where possible, the tab, layout section header and field name pertinent to your request.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Development_Environment__c</fullName>
        <label>Development Environment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Development_Notes__c</fullName>
        <label>Development Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Development_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Issue_Reports5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Development_Phase__c</fullName>
        <label>Development Phase</label>
        <picklist>
            <picklistValues>
                <fullName>Beta Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Development_Status__c</fullName>
        <label>Development Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed in Dev</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for QA Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Favorite__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field was created for Melanie&apos;s use in quickly identify frequently referred to SIRs.</description>
        <label>Favorite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>File_Storage_Alias__c</fullName>
        <formula>Task_Name__c</formula>
        <label>File Storage Alias</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete_Actual__c</fullName>
        <label>Actual Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete_Estimated__c</fullName>
        <label>Estimated Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Approach__c</fullName>
        <label>Implementation Approach</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Admin_Notes__c</fullName>
        <label>Internal Admin Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Next_Action__c</fullName>
        <label>Next Action</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_SIR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SIR</label>
        <referenceTo>Issues_New_Feature_Request__c</referenceTo>
        <relationshipName>Child_SIRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party DK Enhancements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd Party SF User Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounts/Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - Acquisition Approval-Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - Acquisition Assumptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - AZ Bidder Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - Bidding Statistics and Acq Reporting Obj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - Broker Site Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACQ - Prospect - Pipeline - Portfolio object field conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquisition Assumptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Address Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BI Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash Flow Statement Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Change Request Utility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation of Processes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G2 Maps Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geopointe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal / Claims Tracking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitro Integration - Phase I (Rehab)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nitro Integration - Phase II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Review_Notes__c</fullName>
        <label>QA Review Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>QA_Review_Status__c</fullName>
        <inlineHelpText>When first creating a SIR, do not enter a value in this field.  The QA Reviewer will populate this value later in the process.</inlineHelpText>
        <label>QA Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for UAT Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>QA_Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Issue_Reports4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Notes__c</fullName>
        <inlineHelpText>Description of changes for end users</inlineHelpText>
        <label>Release Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required_Completion_Date__c</fullName>
        <label>Required Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Notes__c</fullName>
        <description>Notes from Reviewer</description>
        <label>UAT Review Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UAT Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Issue_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <label>Root Cause</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Self_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Severity</label>
        <picklist>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoke_Test_Profile__c</fullName>
        <inlineHelpText>Profile(s) of user with which to run the Smoke Test</inlineHelpText>
        <label>Smoke Test Profile</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Smoke_Test__c</fullName>
        <label>Smoke Test</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blocked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Category__c</fullName>
        <label>System Category</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data change tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Groups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue/Feature Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layouts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>List Views/Queries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object formula building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports/Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roles/Profiles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State Assumptions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Tags</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visual Force</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web site/HTML 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yardi Integration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Targeted_Development_Completion_Date__c</fullName>
        <label>Targeted Development Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>System_Issue_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Case_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Case Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_Plan_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Automatically set when a QA Test plan is attached via S3</inlineHelpText>
        <label>Test Plan Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Change Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>System Defect</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UAT_Review_Status__c</fullName>
        <label>UAT Review Status</label>
        <picklist>
            <picklistValues>
                <fullName>Assigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_Test_Cases__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unit Test Cases</label>
        <type>Checkbox</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Task_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Development_Owner__c</columns>
        <columns>Development_Status__c</columns>
        <columns>QA_Reviewer__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>Reviewer__c</columns>
        <columns>UAT_Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{00000000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Smoke_Test_Required_for_Testing</fullName>
        <active>true</active>
        <description>A Smoke Test is required when sending to QA for review.</description>
        <errorConditionFormula>TEXT(Development_Status__c) = &apos;Ready for QA Review&apos; &amp;&amp;
LEN(Smoke_Test__c) = 0</errorConditionFormula>
        <errorDisplayField>Smoke_Test__c</errorDisplayField>
        <errorMessage>A Smoke Test is required when sending to QA for review.</errorMessage>
    </validationRules>
</CustomObject>